# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "api-query"
version = "0.1.0"
authors = ["Christian Jaeger <ch@christianjaeger.ch>"]
edition = "2018"

[profile.dev]
panic = "abort"
lto = "off"

[profile.dev.package."*"]
opt-level = 2

[profile.release]
opt-level = "s"

[dependencies]
anyhow = "1.0"
reqwest = "0.11.17"
tokio = { version = "1.36.0", features = ["full"] }
