# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "api-query"
version = "0.1.0"
authors = ["Christian Jaeger <ch@christianjaeger.ch>"]
edition = "2018"

[profile.dev]
panic = "abort"
lto = "off"

[profile.dev.package."*"]
opt-level = 2

[profile.release]
opt-level = "s"

[dependencies]
cj-path-util = { version = "0.1.0", features = [ "unix" ] }
anyhow = { version = "1.0.65", features = ["backtrace"]}
clap = { version = "3", features = ["derive"] }
terminal_size = "0.2"
reqwest = { version = "0.11.17", default-features = false, features = [ "cookies", "multipart", "gzip", "brotli", "deflate" ] }
tokio = { version = "1.36.0", features = ["full"] }
itertools = "0.11.0"
rand = "0.8.5"
lazy_static = "1.4"
futures = "0.3.30"
ouroboros = "0.18.5"
crc-fast = "=1.5.0"
chrono = "0.4"
csv = "1.2.1"
regex = "1.11.1"
num-traits = "0.2.15"
